--- a/foodie-cloud/pom.xml
+++ b/foodie-cloud/pom.xml
@@ -12,7 +12,11 @@
         <module>common/foodie-cloud-shared-pojo</module>
         <module>platform/registry-center</module>
         <module>common/foodie-cloud-web-components</module>
-
+        <module>domain/item/foodie-item-pojo</module>
+        <module>domain/item/foodie-item-mapper</module>
+        <module>domain/item/foodie-item-api</module>
+        <module>domain/item/foodie-item-service</module>
+        <module>domain/item/foodie-item-web</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -100,6 +104,24 @@
             <version>1.18.16</version>
             <scope>provided</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.example</groupId>-->
+<!--            <artifactId>foodie-cloud-common</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.example</groupId>-->
+<!--            <artifactId>foodie-cloud-shared-pojo</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.example</groupId>-->
+<!--            <artifactId>foodie-item-pojo</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
