--- a/foodie-cloud/domain/item/foodie-item-mapper/pom.xml
+++ b/foodie-cloud/domain/item/foodie-item-mapper/pom.xml
@@ -14,15 +14,17 @@
     <artifactId>foodie-item-mapper</artifactId>
 
     <dependencies>
+
+
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>foodie-cloud-common</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.example</groupId>
+            <artifactId>foodie-item-pojo</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>foodie-item-pojo</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.example</groupId>
+            <artifactId>foodie-cloud-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
